# SecureMemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_installer.bat  compile.bat
installer/: SecureMemo.iss
resources/: app.rc
src/: main.cpp
src/app/: Application.cpp  Application.h  NoteManager.cpp  NoteManager.h  SecurityGuard.cpp  SecurityGuard.h  UpdateChecker.cpp  UpdateChecker.h  Version.h
src/crypto/: Auth.cpp  Auth.h  Crypto.cpp  Crypto.h  PublicIndex.cpp  PublicIndex.h  VaultStorage.cpp  VaultStorage.h
src/model/: Note.cpp  Note.h
src/ui/: LockDialog.cpp  LockDialog.h  NoteWindow.cpp  NoteWindow.h  NotesListWindow.cpp  NotesListWindow.h  Theme.h  TrayIcon.cpp  TrayIcon.h
src/util/: SecureBuffer.h
tools/: crypto_smoke.cpp  make_ico.ps1
